<resources>
    <string name="app_name">芯云小天才分享Pro</string>
    <string name="chat_scene">微聊</string>
    <string name="moment_scene">好友圈</string>
    <string name="cancel_share">取消</string>
    <string name="please_install_weichat">请先安装微聊</string>
    <string name="please_install_moment">请先安装好友圈</string>
    <string name="moment_forbid">好友圈已被禁用</string>
    <string name="text_page_bjk">请输入分享文本</string>
    <string name="app_page_bjk">请输入分享文本</string>
    <string name="link_page_bjk">请输入分享文本</string>
    <string name="link_page_bjk_links">请输入分享链接</string>
    <string name="link_page_bjk_linkslist">链接列表</string>
    <string name="corecloud">芯云工作室</string>
    <string name="set_background">设置背景</string>
    <string name="set_background_pro">设置自定义背景</string>
    <string name="set_icon">设置图标</string>
    <string name="set_icon_pro">设置应用图标</string>
    <string name="top">芯云交流群:1081555243</string>
    <string name="share_app">分享应用</string>
    <string name="share_app_pro">分享使用应用</string>
    <string name="set_software_name">请输入应用名称</string>
    <string name="set_software_true">保存</string>
    <string name="set_jst">设置介绍图</string>
    <string name="set_jst_pro">设置自定义介绍图</string>
    <string name="set">还原默认配置</string>
    <string name="share_failed_code">分享失败，错误码：</string>
    <string name="link">https://corexwear.com/</string>
    <string name="important">禁止删除原工作室与群号以及赞赏码违者必究</string>
    <string name="pscontent">请先输入需分享文本</string>
    <string name="error_no_target_app">未安装目标应用</string>
    <string name="error_unsupported_version">当前版本不支持分享</string>
    <string name="share_success">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="share_network_error">网络异常，分享失败</string>
    <string name="deving">功能正在施工中，建议打赏作者加快更新</string>
    <string name="img_choose">选择图片</string>
    <string name="img_choose_title">选择自定义图片</string>
    <string name="sharetext">分享</string>
    <string name="video_choose">选择视频</string>
    <string name="video_choose_title">选择自定义视频</string>
</resources>