<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/video1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/video2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/video3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">


            <LinearLayout
                android:id="@+id/video4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/video5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="0dp"
                    app:cardBackgroundColor="#7D2A2B2C"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:id="@+id/video6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/video7"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:gravity="center|left"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/video8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/video9"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/video_choose"
                                    android:textColor="#FFFFFF"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/video10"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/video_choose_title"
                                    android:textColor="#999999"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/video11"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center|right"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/vdeio12"
                                    android:layout_width="36dp"
                                    android:layout_height="36dp"
                                    android:src="@drawable/next_icon" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/video13"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/video14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="0dp"
                    app:cardBackgroundColor="#7D2A2B2C"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:id="@+id/video15"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/video16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/video17"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sharetext"
                                android:textColor="#FFFFFF"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>