<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/app2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/app3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/app4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:elevation="0dp"
                android:minHeight="80dp"
                app:cardBackgroundColor="#7D2A2B2C"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:id="@+id/app5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_vertical"
                    android:minHeight="50dp"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <EditText
                        android:id="@+id/app6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:hint="@string/app_page_bjk"
                        android:inputType="textMultiLine"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="#CBFFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/app7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/app8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="0dp"
                    app:cardBackgroundColor="#7D2A2B2C"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:id="@+id/app9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/app10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/app11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/chat_scene"
                                android:textColor="#FFFFFF"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/app12"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/app13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="0dp"
                    app:cardBackgroundColor="#7D2A2B2C"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:id="@+id/app14"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/app15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/app16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/moment_scene"
                                android:textColor="#FFFFFF"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>